--- a/styles.css
+++ b/styles.css
@@ -5,239 +5,103 @@
 }
 
 body {
-  background-image: linear-gradient(45deg, rgb(70, 0, 105), rgb(13, 0, 254));
-  height: 100vh;
   width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 100vh;
+  border: solid 5px crimson;
+  background: whitesmoke;
 }
-.border1,
-.border2 {
-  width: 100%;
-  height: 5px;
-  background-color: black;
-}
-.border2 {
-  position: relative;
-  top: 200px;
-}
-.border1 {
-  position: relative;
-  top: 395px;
-}
-img {
-  width: 100px;
-  position: relative;
-  top: 400px;
-  right: 1080px;
-  border-radius: 30px;
-  animation: pudzian 10s 0s infinite linear;
-}
-
-.kolo {
-  width: 300px;
-  height: 300px;
-  border-radius: 205px;
-  background-color: rgb(206, 183, 156);
-  position: absolute;
-  animation: kolo 10s 0s infinite linear;
-}
-.kolo2 {
-  width: 200px;
-  height: 200px;
-  border-radius: 205px;
-  background-color: rgb(155, 83, 0);
-  position: absolute;
-  animation: kolo2 10s 0s infinite linear;
-}
-.kolo3 {
-  width: 100px;
-  height: 100px;
-  border-radius: 205px;
-  background-color: rgb(61, 52, 42);
-  position: absolute;
-  animation: kolo3 10s 0s infinite linear;
-}
-
 main {
-  height: 70vh;
-  width: 90vw;
-  font-family: "Dancing Script";
+  background: crimson;
+}
+main h1 {
+  font-family: tahoma;
+  color: white;
+  font-size: 20px;
+  width: 100%;
   text-align: center;
-  background-image: linear-gradient(
-    45deg,
-    rgba(0, 0, 0, 0.434),
-    rgba(0, 0, 0, 0.2)
-  );
-  border-radius: 20px;
-  backdrop-filter: blur(8px);
+  padding-top: 20px;
+  padding-bottom: 20px;
+  letter-spacing: 7px;
+}
+main img {
+  width: 40%;
+}
+.img-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+main .banners-container {
+  width: 100%;
+  background: crimson;
+  display: flex;
+  flex-direction: row;
+}
+.banner {
+  width: 200px;
+  height: 100px;
+  border: black 1px solid;
+  margin: 10px;
+  border-radius: 7px;
+  color: white;
+  font-family: tahoma;
+  transition: 0.25s;
+  text-align: center;
+}
+.banner p:nth-of-type(1) {
+  font-weight: 800;
+}
+.banner p {
+  font-size: 11px;
+  width: 100%;
+  margin-top: 10px;
+  text-align: center;
+}
+.banner h3 {
+  font-size: 14px;
+  font-weight: 900;
+  width: 100%;
+  margin-top: 15px;
+  text-align: center;
+}
+.banner:hover {
+  border-color: whitesmoke;
 }
 h1 {
-  font-size: 80px;
-  margin: 20px;
+  font-family: tahoma;
+  letter-spacing: 7px;
+  font-size: 20px;
+  width: 100%;
+  height: 50px;
+  text-align: center;
 }
-h3 {
-  font-size: 50px;
-  margin: 20px;
-  margin-bottom: 100px;
+section p:nth-of-type(1) {
+  font-size: 12px;
+  margin-top: 20px;
 }
-p {
-  font-size: 30px;
+form input {
+  width: 120px;
 }
-
-@keyframes kolo {
-  0% {
-    top: 600px;
-    left: 600px;
-  }
-  25% {
-    top: 100px;
-    left: 160px;
-  }
-  50% {
-    top: 500px;
-    left: 1800px;
-  }
-  75% {
-    top: 60px;
-    left: 0px;
-  }
-  100% {
-    top: 600px;
-    left: 600px;
-  }
+ul {
+  margin-left: 30px;
+  margin-top: 20px;
 }
-
-@keyframes kolo2 {
-  0% {
-    top: -100px;
-    left: 1600px;
-  }
-  25% {
-    top: 400px;
-    left: 360px;
-  }
-  50% {
-    top: 700px;
-    left: 800px;
-  }
-  75% {
-    top: 200px;
-    left: 600px;
-  }
-  100% {
-    top: -100px;
-    left: 1600px;
-  }
+section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background: whitesmoke;
 }
-
-@keyframes kolo3 {
-  0% {
-    top: 300px;
-    left: 600px;
-  }
-  25% {
-    top: 400px;
-    left: 360px;
-  }
-  50% {
-    top: 70px;
-    left: 80px;
-  }
-  75% {
-    top: -20px;
-    left: 60px;
-  }
-  100% {
-    top: 300px;
-    left: 600px;
-  }
+.right-section img {
+  width: 100px;
 }
-
-@keyframes pudzian {
-  0% {
-    top: 400px;
-    right: 1080px;
-  }
-  5% {
-    top: 200px;
-    right: 800px;
-  }
-  10% {
-    top: 400px;
-    right: 600px;
-  }
-  15% {
-    top: 200px;
-    right: 400px;
-  }
-  20% {
-    top: 400px;
-    right: 200px;
-  }
-  25% {
-    top: 200px;
-    right: 0px;
-  }
-  30% {
-    top: 400px;
-    right: -200px;
-  }
-  35% {
-    top: 200px;
-    right: -400px;
-  }
-  40% {
-    top: 400px;
-    right: -600px;
-  }
-  45% {
-    top: 200px;
-    right: -800px;
-  }
-  50% {
-    top: 400px;
-    right: -1080px;
-  }
-  55% {
-    top: 200px;
-    right: -800px;
-  }
-  60% {
-    top: 400px;
-    right: -600px;
-  }
-  65% {
-    top: 200px;
-    right: -400px;
-  }
-  70% {
-    top: 400px;
-    right: -200px;
-  }
-  75% {
-    top: 200px;
-    right: 0px;
-  }
-  80% {
-    top: 400px;
-    right: 200px;
-  }
-  85% {
-    top: 200px;
-    right: 400px;
-  }
-  90% {
-    top: 400px;
-    right: 600px;
-  }
-  95% {
-    top: 200px;
-    right: 800px;
-  }
-  100% {
-    top: 400px;
-    right: 1080px;
-  }
+.left-section {
+  width: 70%;
+  background: whitesmoke;
+}
+.right-section {
+  width: 28%;
+  text-align: right;
+  background: whitesmoke;
 }
